feat: Add info route
