# swagger.json
@@ -36,6 +36,28 @@
       "UnpkgQuery": {
         "description": "Get a link to unpkg.com",
         "type": "boolean"
+      },
+      "Info": {
+        "example": {
+          "code": 200,
+          "commit": "acd88bb5ecea72f86229249278661edbf91d272c",
+          "version": "1.2.3"
+        },
+        "properties": {
+          "code": {
+            "type": "integer"
+          },
+          "commit": {
+            "required": false,
+            "type": "string"
+          },
+          "version": {
+            "required": false,
+            "type": "string"
+          }
+        },
+        "required": ["code", "url"],
+        "type": "object"
       }
     }
   },
@@ -49,7 +71,7 @@
       "url": "https://github.com/ffflorian/pkgsource/blob/main/LICENSE"
     },
     "title": "pkgsource",
-    "version": "1.3.0"
+    "version": "1.4.5"
   },
   "openapi": "3.0.0",
   "paths": {
@@ -107,6 +129,25 @@
         "responses": {
           "200": {
             "description": "Everything is ok"
+          }
+        },
+        "tags": ["Server Info"]
+      }
+    },
+    "/_info/": {
+      "get": {
+        "description": "Get information about the server",
+        "operationId": "getServerInformation",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Info"
+                }
+              }
+            },
+            "description": "That worked"
           }
         },
         "tags": ["Server Info"]
